API connection with app
Ya está el archivo de conexion entre el app y el API, y puse la carpeta para empezar a hacer el API

--- a/Alert-Me/angular.json
+++ b/Alert-Me/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Alert-Me"
+    }
+  },
+  "defaultProject": "Alert-Me",
+  "cli": {
+    "analytics": "5ee5bf3a-8807-436c-9916-e4cd723d1a34"
+  }
 }
