--- a/API/package.json
+++ b/API/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "tsc index.ts && node index.js",
-    "start:dev": "./node_modules/nodemon/bin/nodemon.js",
+    "start:dev": " nodemon ./node_modules/nodemon/bin/nodemon.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tslint": "tslint --project tsconfig.json --config tslint.json",
     "tslint-fix": "tslint --project tsconfig.json --config tslint.json --fix",
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "ts-loader": "^8.0.4",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
