--- a/API/package.json
+++ b/API/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/mongoose": "^5.7.36",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "get-json": "^1.0.1",
     "mongoose": "^5.10.9"
