--- a/API/package.json
+++ b/API/package.json
@@ -20,7 +20,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "get-json": "^1.0.1",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
