--- a/Alert-Me/package.json
+++ b/Alert-Me/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "@angular/service-worker": "~9.1.12",
     "@types/jquery": "^3.5.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
