--- a/API/package.json
+++ b/API/package.json
@@ -20,9 +20,11 @@
     "cors": "^2.8.5",
     "cpu-stats": "^1.0.0",
     "express": "^4.17.1",
+    "geoip-lite": "^1.4.2",
     "get-json": "^1.0.1",
     "mongoose": "^5.10.9",
     "node-cron": "^2.0.3",
+    "public-ip": "^4.0.2",
     "request": "^2.88.2"
   },
   "devDependencies": {
