--- a/Alert-Me/package.json
+++ b/Alert-Me/package.json
@@ -26,6 +26,7 @@
     "geoip-lite": "^1.4.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "uuid": "^8.3.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
