--- a/API/package.json
+++ b/API/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "get-json": "^1.0.1",
     "mongoose": "^5.10.9",
+    "random-location": "^1.1.3",
     "request": "^2.88.2"
   },
   "devDependencies": {
