--- a/API/package.json
+++ b/API/package.json
@@ -26,7 +26,8 @@
     "node-cron": "^2.0.3",
     "public-ip": "^4.0.2",
     "random-location": "^1.1.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sleep": "^6.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
